Bug 65844 - Two colour *.pic images rendered inversed in Writer
Summary: Two colour *.pic images rendered inversed in Writer
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.1.0.0.beta2
Hardware: All All
: medium major
Assignee: David Tardon
URL:
Whiteboard: target:4.1.0.1 target:4.2.0
Keywords: regression
Depends on:
Blocks:
 
Reported: 2013-06-17 06:08 UTC by Fridrich Strba
Modified: 2013-06-18 11:44 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments
This file inserted in writer shows white on black background. Although it is black on white background (19.71 KB, image/x-pict)
2013-06-17 06:08 UTC, Fridrich Strba
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Fridrich Strba 2013-06-17 06:08:52 UTC
Created attachment 80930 [details]
This file inserted in writer shows white on black background. Although it is black on white background

When one inserts the attached file in a Writer document, it is rendered in inverse video (white picture on black background). Whereas, when opened in draw, inserted into Impress document or into Calc, it shows correctly as black on white background. This problem does not exist in LibreOffice 4.0.3.3.
Comment 1 Fridrich Strba 2013-06-17 06:10:12 UTC
Could someone, please help to bi-bisect which commit created this situation?
Comment 2 David Tardon 2013-06-17 06:52:53 UTC
FWIW, it works correctly in F-19's build of 4.1.0.0 beta2
Comment 3 David Tardon 2013-06-17 15:04:32 UTC
Confirmed. The picture is displayed in reverted colors iff the page zoom is < 100%.

And since I have already spent most of the day debugging it, I am taking it...
Comment 4 Commit Notification 2013-06-18 10:07:03 UTC
David Tardon committed a patch related to this issue.
It has been pushed to "libreoffice-4-1":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=5ef3c40ff0e70704cbc7d846722db9618d01ca53&h=libreoffice-4-1

fdo#65844 use right colors from palette


It will be available in LibreOffice 4.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2013-06-18 10:07:21 UTC
David Tardon committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=1b3a39bfa10177aed40a4a9a69d0fe1970229422

fdo#65844 use right colors from palette



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.