fdo#65844 use right colors from palette

It is not correct to expect that the palette will always be the same as
default-constructed from VCL. For example, 1bit PICT images use reversed
white and black.

Change-Id: I6b5e7cd19af98202e80f4cff17fddaa3a3f0e3af